# cubek-einsum

./: README.md
cubek-einsum/: Cargo.toml  README.md
cubek-einsum/benchmarks/: Cargo.toml
cubek-einsum/benchmarks/benches/: einsum.rs
cubek-einsum/src/: error.rs  lib.rs
cubek-einsum/src/kernels/: broadcast_multiply.rs  copy_reshape.rs  diagonal.rs  dot_product.rs  hadamard.rs  mod.rs  outer_product.rs  trace.rs
cubek-einsum/src/launch/: config.rs  executor.rs  mod.rs  workspace.rs
cubek-einsum/src/notation/: mod.rs  notation.rs  parser.rs  subscript.rs  validation.rs
cubek-einsum/src/optimization/: branch_bound.rs  cost.rs  dynamic.rs  greedy.rs  mod.rs  path.rs  plan.rs
cubek-einsum/src/pattern/: binary.rs  fast_path.rs  matmul.rs  mod.rs  unary.rs
cubek-einsum/tests/: lib.rs
cubek-einsum/tests/suite/: chain_tests.rs  integration_tests.rs  mod.rs  optimization_tests.rs  parser_tests.rs  pattern_tests.rs
