[package]
authors = ["CubeCL Contributors"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Einstein Summation (Einsum) - SOTA tensor contraction for GPU"
edition = "2024"
keywords = ["einsum", "tensor", "contraction", "gpu"]
license = "MIT OR Apache-2.0"
name = "cubek-einsum"
readme = "README.md"
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-einsum"
version = "0.1.0"

[workspace]
members = ["benchmarks"]

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std", "thiserror/std"]

# Test features
einsum_tests_matmul = []
einsum_tests_reduce = []
einsum_tests_transpose = []
einsum_tests_batch = []
einsum_tests_contraction = []
einsum_tests_f16 = []
einsum_tests_f32 = []

einsum_tests_base = [
    "einsum_tests_matmul",
    "einsum_tests_reduce",
    "einsum_tests_transpose",
    "einsum_tests_f32",
]

[dependencies]
cubek-matmul = { git = "https://github.com/tracel-ai/cubek", default-features = false }
cubek-reduce = { git = "https://github.com/tracel-ai/cubek", default-features = false }

cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = ["stdlib"] }
cubecl-common = { git = "https://github.com/tracel-ai/cubecl", default-features = false }

half = { version = "2.5", features = ["alloc", "num-traits", "serde"], default-features = false }
serde = { version = "1.0.204", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
smallvec = { version = "1", features = ["union", "const_generics"] }
hashbrown = "0.15.5"

[dev-dependencies]
pretty_assertions = "1.4"
cubecl = { git = "https://github.com/tracel-ai/cubecl", features = ["test-runtime"] }

[patch.crates-io]
cubecl = { git = "https://github.com/tracel-ai/cubecl" }
cubecl-common = { git = "https://github.com/tracel-ai/cubecl" }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl" }
cubecl-ir = { git = "https://github.com/tracel-ai/cubecl" }
cubecl-core = { git = "https://github.com/tracel-ai/cubecl" }
cubecl-std = { git = "https://github.com/tracel-ai/cubecl" }
cubecl-macros = { git = "https://github.com/tracel-ai/cubecl" }
cubecl-macros-internal = { git = "https://github.com/tracel-ai/cubecl" }
