[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Benchmarks"
edition = "2024"
keywords = []
license = "MIT OR Apache-2.0"
name = "benchmarks"
readme = "README.md"
repository = "https://github.com/tracel-ai/cubek"
version = "0.1.0"

[features]
cuda = ["cubecl/cuda"]
hip = ["cubecl/hip"]
wgpu = ["cubecl/wgpu"]
wgpu-msl = ["cubecl/wgpu-msl"]
wgpu-spirv = ["cubecl/wgpu-spirv"]

[dependencies]
cubecl = { git = "https://github.com/tracel-ai/cubecl", features = ["test-runtime", "stdlib"] }
# We use the local cubek-einsum for testing
cubek-einsum = { path = ".." }
# We use the git cubek for other utilities (like random)
cubek = { git = "https://github.com/tracel-ai/cubek", default-features = false, features = ["random"] }
half = { version = "2.5", features = ["alloc", "num-traits", "serde"], default-features = false }

[[bench]]
harness = false
name = "einsum"